--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^4.12.0",
     "@sapphire/framework": "^4.2.2",
     "@sapphire/pieces": "^3.6.1",
+    "@sapphire/plugin-logger": "^3.0.2",
     "@types/node": "^18.15.11",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
