style: db import path alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,10 @@
 
     // Some stricter flags
     "useUnknownInCatchVariables": true,
-    "noPropertyAccessFromIndexSignature": true
+    "noPropertyAccessFromIndexSignature": true,
+
+		"paths": {
+			"@/*": ["./db/*"]
+		}
   }
 }
